Tests unitaires sur services ok